WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180483
[WinCairo] Fix ResourceError handling in ArgumentCoder for wincairo webkit
https://bugs.webkit.org/show_bug.cgi?id=180483
Summary
[WinCairo] Fix ResourceError handling in ArgumentCoder for wincairo webkit
Yousuke Kimoto
Reported
2017-12-06 10:27:29 PST
To handle argument coder for ResourceError correctly, WebCoreArgumentCodersCurl.cpp has to have right implementation for ResourceError.
Attachments
Patch
(2.76 KB, patch)
2017-12-06 10:38 PST
,
Yousuke Kimoto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yousuke Kimoto
Comment 1
2017-12-06 10:38:01 PST
Created
attachment 328586
[details]
Patch
WebKit Commit Bot
Comment 2
2017-12-07 19:00:45 PST
Comment on
attachment 328586
[details]
Patch Clearing flags on attachment: 328586 Committed
r225666
: <
https://trac.webkit.org/changeset/225666
>
WebKit Commit Bot
Comment 3
2017-12-07 19:00:47 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-12-07 19:01:31 PST
<
rdar://problem/35926232
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug