[WinCairo] Fix ResourceError handling in ArgumentCoder for wincairo webkit https://bugs.webkit.org/show_bug.cgi?id=180483

Patch by Yousuke Kimoto <yousuke.kimoto@sony.com> on 2017-12-07
Reviewed by Alex Christensen.

* Shared/curl/WebCoreArgumentCodersCurl.cpp:
(IPC::ArgumentCoder<ResourceError>::encodePlatformData):
(IPC::ArgumentCoder<ResourceError>::decodePlatformData):

Canonical link: https://commits.webkit.org/196486@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225666 268f45cc-cd09-0410-ab3c-d52691b4dbfc