Source/WebKit/Shared/curl/WebCoreArgumentCodersCurl.cpp
@@ -56,12 +56,52 @@ bool ArgumentCoder<CertificateInfo>::decode(Decoder&, CertificateInfo&)
     return true;
 }
 
-void ArgumentCoder<ResourceError>::encodePlatformData(Encoder&, const ResourceError&)
+void ArgumentCoder<ResourceError>::encodePlatformData(Encoder& encoder, const ResourceError& resourceError)
 {
+    encoder.encodeEnum(resourceError.type());
+    if (resourceError.isNull())
+        return;
+
+    encoder << resourceError.domain();
+    encoder << resourceError.errorCode();
+    encoder << resourceError.failingURL().string();
+    encoder << resourceError.localizedDescription();
+    encoder << resourceError.sslErrors();
 }
 
-bool ArgumentCoder<ResourceError>::decodePlatformData(Decoder&, ResourceError&)
+bool ArgumentCoder<ResourceError>::decodePlatformData(Decoder& decoder, ResourceError& resourceError)
 {
+    ResourceErrorBase::Type errorType;
+    if (!decoder.decodeEnum(errorType))
+        return false;
+    if (errorType == ResourceErrorBase::Type::Null) {
+        resourceError = { };
+        return true;
+    }
+
+    String domain;
+    if (!decoder.decode(domain))
+        return false;
+
+    int errorCode;
+    if (!decoder.decode(errorCode))
+        return false;
+
+    String failingURL;
+    if (!decoder.decode(failingURL))
+        return false;
+
+    String localizedDescription;
+    if (!decoder.decode(localizedDescription))
+        return false;
+
+    unsigned sslErrors;
+    if (!decoder.decode(sslErrors))
+        return false;
+
+    resourceError = ResourceError(domain, errorCode, URL(URL(), failingURL), localizedDescription, errorType);
+    resourceError.setSslErrors(sslErrors);
+
     return true;
 }
 
